Mainpage was supplemented by a search bar and its logic. Data organisation was rethinked.

--- a/QuizGame/QuizGame.csproj
+++ b/QuizGame/QuizGame.csproj
@@ -56,6 +56,15 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <AndroidResource Remove="Views\**" />
+	  <Compile Remove="Views\**" />
+	  <EmbeddedResource Remove="Views\**" />
+	  <MauiCss Remove="Views\**" />
+	  <MauiXaml Remove="Views\**" />
+	  <None Remove="Views\**" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <None Remove="Resources\Images\linkedin_logo.png" />
 	  <None Remove="Resources\linkedin-skill-assessments-quizzes\adobe-lightroom\adobe-lightroom-ch.md" />
 	</ItemGroup>
@@ -65,10 +74,7 @@
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="Views\" />
+		<PackageReference Include="Microsoft.VisualStudio.Utilities" Version="17.9.37000" />
 	</ItemGroup>
 
 </Project>
