Services, Converters was created. Mainpage and codesnippet was checked.

--- a/QuizGame/QuizGame.csproj
+++ b/QuizGame/QuizGame.csproj
@@ -57,6 +57,7 @@
 
 	<ItemGroup>
 	  <MauiImage Remove="Resources\Images\linkedin-skill-assessments-quizzes\.git" />
+	  <MauiImage Remove="Resources\Images\linkedin-skill-assessments-quizzes\LICENSE" />
 	</ItemGroup>
 
 	<ItemGroup>
